# econ-newsfeed

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  DESIGN.md  Dockerfile.api  ISSUES.md  Makefile  PERFORMANCE_ANALYSIS.md  README.md  SECURITY_AUDIT.md  TRACKS.md  USABILITY_REPORT.md  api.py  auth.py  database.py  db_config.py  debug.py  digest.py  discovered_urls.csv  docker-compose.prod.yml  docker-compose.yml  doi_resolver.py  encoding_guard.py  extraction.py  feed_events.py  fetch_and_save_html.py  html_fetcher.py  jel_classifier.py  jel_enrichment.py  link_extractor.py  llm_client.py  main.py  notes.txt  openai_client.py  openalex.py  paper_merge.py  paper_saver.py  (+13 more)
.full-review/: 00-scope.md  01-quality-architecture.md  02-security-performance.md  state.json
.full-review-archive-20260317-171615/: 00-scope.md  01-quality-architecture.md  state.json
.github/: dependabot.yml
app/: .dockerignore  .env.local.example  Dockerfile  jest.config.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
audits/: 2026-06-29.md  2026-06-30.md  2026-07-01.md
backend/: api.py  auth.py  config.py  digest.py  main.py  researcher.py
conductor/: index.md  product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md  workflow.md
database/: __init__.py  admin.py  connection.py  jel.py  llm.py  papers.py  researchers.py  schema.py  search_helpers.py  snapshots.py  users.py
docs/: test-coverage-analysis.md
eval/: analyze.py  export_test_cases.py  fetch_prices.py  promptfooconfig.yaml
migrations/: 001_publications_to_papers.sql
scripts/: audit_encoding.py  audit_zero_pub_researchers.py  backfill_affiliations.py  backfill_event_dates.py  backfill_normalized_hashes.py  backfill_page_owner_authorship.py  backfill_paper_links.py  backfill_researcher_fields.py  backup.sh  check_env.py  cleanup_bad_names.py  cleanup_data_quality.py  cleanup_false_feed_events.py  cleanup_garbage_papers.py  cleanup_seed_events.py  deploy.sh  discover_research_pages.py  import_repec_urls.py  install_hetzner_key.sh  match_repec.py  merge_duplicate_researchers.py  merge_fuzzy_duplicates.py  parasail_batch.py  sync_prod_db.sh  test_sync_extraction.py
tests/: conftest.py  test_admin_dashboard.py  test_api_filters.py  test_api_integration.py  test_api_jel.py  test_api_middleware.py  test_api_publications.py  test_api_researchers.py  test_api_response_shapes.py  test_api_scrape.py  test_api_search.py  test_api_url_deactivation.py  test_audit_encoding.py  test_audit_regression.py  test_auth.py  test_compact_diff.py  (+59 more)
(+195 files in other folders)
