[tool.poetry]
name = "econ-newsfeed"
description = "Monitor economics researchers' websites, detect new publications via LLM extraction, and display them in a chronological newsfeed."
version = "0.1.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32"
python-dotenv = "^1.0"
beautifulsoup4 = "^4.12"
mysql-connector-python = "^9.1"
openai = "^1.59"
fastapi = "^0.115"
uvicorn = {version = "^0.34", extras = ["standard"]}
gunicorn = "^25"
apscheduler = "^3.10"
pydantic = "^2.10"
slowapi = "^0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
