[tool.poetry]
name = "econ-newsfeed"
description = "Monitor economics researchers' websites, detect new publications via LLM extraction, and display them in a chronological newsfeed."
version = "0.1.0"
readme = "README.md"
package-mode = false
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.33"
python-dotenv = "^1.0"
beautifulsoup4 = "^4.12"
mysql-connector-python = "^9.1"
openai = "^2.30"
fastapi = ">=0.135,<0.137"
uvicorn = {version = "^0.42", extras = ["standard"]}
gunicorn = "^25"
apscheduler = "^3.10"
pydantic = "^2.10"
slowapi = "^0.1"
ftfy = "^6.3.1"
google-genai = "^1.75.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
resend = "^2.30.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<10"
httpx = "^0.28"
matplotlib = "^3.10.8"
pytest-asyncio = "^1.4.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
